# altitude

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamllint.yml  CONTRIBUTING.md  Makefile  README.md  api.yml
client/: .gitignore  Dockerfile  Dockerfile.dev  README.md  angular.json  css-to-ts.js  karma.conf.js  package-lock.json  package.json  proxy.conf.json  tsconfig.json
client/src/: index.html  main.ts  polyfills.ts  styles.scss  test.ts
client/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
client/src/app/admin/: admin.module.ts  config.ts
client/src/app/cases/: cases.module.ts
client/src/app/http-interceptors/: api-interceptor.spec.ts  api-interceptor.ts  error-interceptor.spec.ts  error-interceptor.ts  index.ts
client/src/app/models/: case.model.spec.ts  case.model.ts  priority.model.ts  review-stats.model.spec.ts  review-stats.model.ts
client/src/app/routing/: page-title-strategy.service.spec.ts  page-title-strategy.service.ts  resolvers.ts  routes.ts  routing.module.spec.ts  routing.module.ts
client/src/app/services/: admin.service.ts  auto-refresh.service.spec.ts  auto-refresh.service.ts  case-list-navigator.service.spec.ts  case-list-navigator.service.ts  cases.service.spec.ts  cases.service.ts  logger.service.spec.ts  logger.service.ts  review.service.spec.ts  review.service.ts  upload.service.spec.ts  upload.service.ts
client/src/app/shared/: shared.module.ts  tokens.ts
client/src/app/testing/: case_models.ts
client/src/environments/: environment.prod.ts  environment.ts
docs/: faq.md  overview.md
gateway/: Dockerfile  README.md  nginx.conf.template
infrastructure/: README.md
infrastructure/docker/: compose.dev.yml  compose.prod.yml  compose.yml
infrastructure/hma/: config_dev.py  config_prod.py
mongodb/: Dockerfile  initialize_db.js
scripts/: pdq.py  submit_hashpdq_signals.sh  submit_image_signals.sh  submit_image_targets.sh  submit_url_signals.sh
signal-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
signal-service/data/tcap_csvs/: fake_tcap_data.csv
signal-service/src/: config.py  flask_app.py  gunicorn_app.py  server.py  server_test.py  update_case_priority.py
signal-service/src/analyzers/: analyzer.py  ocr.py  ocr_test.py  perspective.py  perspective_test.py  safe_search.py  safe_search_test.py  translation.py  translation_test.py
signal-service/src/api/: __init__.py  api_error.py  case.py  case_test.py  importer.py  importer_test.py  json.py  json_test.py  review.py  review_stats.py  review_stats_test.py  review_test.py  signal.py  signal_test.py  target.py  target_test.py  validation.py  validation_test.py
signal-service/src/importers/: importer.py  importer_test.py  tcap_api.py  tcap_api_test.py  tcap_csv.py  tcap_csv_test.py  threat_exchange.py  threat_exchange_test.py
signal-service/src/indexing/: index.py  index_test.py
signal-service/src/models/: case.py  case_test.py  importer.py  importer_test.py  job.py  job_test.py  settings.py  signal.py  signal_test.py  target.py  user.py
signal-service/src/models/features/: engagement.py  image.py  text.py  user.py
signal-service/src/mongodb/: connection.py  fields.py  update.py
signal-service/src/prioritization/: case_priority.py  case_priority_test.py
signal-service/src/taskqueue/: config.py  tasks.py  tasks_test.py  worker.py
signal-service/src/testing/: test_case.py  test_entities.py
signal-service/src/utils/: cursor.py  cursor_test.py  hashing.py  hashing_test.py  hma.py  image.py  image_test.py  iterators.py  iterators_test.py  json.py  json_test.py
ui-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ui-service/src/: gunicorn_app.py  server.py  server_test.py
ui-service/src/testing/: test_case.py
(+142 files in other folders)
